--- a/Lab3/derecha1.html
+++ b/Lab3/derecha1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
+        <meta http-equiv="Content-Type" content="text/html" charset="utf-8"/>
 
         <title>Eliges la derecha</title>
         <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/1/1e/RPC-JP_Logo.png">
