--- a/Lab3/derecha2.html
+++ b/Lab3/derecha2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
+        <meta http-equiv="Content-Type" content="text/html" charset="utf-8"/>
 
         <title>Sin salida</title>
 
