--- a/Lab3/cabana.html
+++ b/Lab3/cabana.html
@@ -9,9 +9,9 @@
 
     </head>
 
-    <body style="background-color: aqua;">
+    <body>
 
-        <p style = "font-family:georgia,garamond,serif;font-size:20px;font-style:italic;">
+        <p>
             Inicias tu camino hacia la cabaña, tratas de que tus pasos sean lo menos ruidosos posibles, poco a poco te vas acercando mas y mas a la puerta principal, 
             cuando te encuentras a unos diez metros escuchas un sonido fuerte, uno de los jaguares de levantó y empieza a correr hacia ti, al percatarte de esto empiezas
             a correr como nunca lo habias hecho en tu vida, sientes al animal cada vez más cerca y la puerta más lejos, haces tu máximo esfuerzo y al fin logras llegar,
@@ -24,7 +24,7 @@
         <a href='izquierda2.html'>Ir hacia la izquierda</a><br><br>
 
         <label for="file" >Progreso de la historia:</label>
-       <progress style="text-align:center" id="file" value="45" max="100"> 0% </progress><br>
+       <progress id="file" value="45" max="100"> 0% </progress><br>
         
     </body>
 
