--- a/Lab3/cura.html
+++ b/Lab3/cura.html
@@ -11,10 +11,10 @@
 
     </head>
 
-    <body style="background-color:powderblue;">
+    <body>
 
 
-        <p style = "font-family:georgia,garamond,serif;font-size:20px;font-style:italic;">
+        <p>
             Lo que has hecho fue un acto heroico, el cáncer ha desaparecido del planeta, desfortunadamente tu te quedarás aqui para siempre, pero con la mente tranquila de haber elegido
             un bien mayor
         </p>
@@ -22,7 +22,7 @@
         <a href='home.html'><button>Volver al inicio</button></a><br><br>
 
         <label for="file" >Progreso de la historia:</label>
-        <progress style="text-align:center" id="file" value="100" max="100"> 0% </progress><br>
+        <progress id="file" value="100" max="100"> 0% </progress><br>
 
     </body>
 </html>
