--- a/Lab3/derecha1.html
+++ b/Lab3/derecha1.html
@@ -9,9 +9,9 @@
 
     </head>
 
-    <body style="background-color: aqua;">
+    <body>
 
-        <p style = "font-family:georgia,garamond,serif;font-size:20px;font-style:italic;">
+        <p>
             Decides ir a la derecha, caminas durante 10 minutos en linea recta, al fondo del camino ves una cabaña abandonada, talvez ahi encuentres comida o algo de tomar,
             pero antes de continuar te percatas que justo antes de llegar se encuentra descansando una familia de jaguares. Lo más probable es que mueras antes de llegar a la cabña,
             o puede se rque los jaguares no se despierten cuando pases. Debes tomar una decisión!!!
@@ -23,7 +23,7 @@
         <img src="https://i.pinimg.com/originals/fe/39/13/fe391320e6d1979735cf3a6abe1a8ac8.jpg" class='center' alt="300"><br>
 
        <label for="file" >Progreso de la historia:</label>
-       <progress style="text-align:center" id="file" value="30" max="100"> 0% </progress><br>
+       <progress id="file" value="30" max="100"> 0% </progress><br>
 
     </body>
 
