--- a/Lab3/egoista.html
+++ b/Lab3/egoista.html
@@ -11,16 +11,16 @@
 
     </head>
 
-    <body style="background-color:powderblue;">
+    <body>
 
-        <p style = "font-family:georgia,garamond,serif;font-size:20px;font-style:italic;">
+        <p>
             Tu decision ha sido muy egoista, las personas que te pusieron en este lugar querian saber si eras capaz de elegir un bien mayor a un bien propio,
             como consecuencia no podras salir nunca de este lugar. GAME OVER
         </p>
 
 
         <label for="file" >Progreso de la historia:</label>
-        <progress style="text-align:center" id="file" value="100" max="100"> 0% </progress><br>
+        <progress id="file" value="100" max="100"> 0% </progress><br>
 
         <a href='home.html'><button>Volever al inicio</button></a><br>
 
