--- a/Lab3/gameover.html
+++ b/Lab3/gameover.html
@@ -11,9 +11,9 @@
 
     </head>
 
-    <body style="background-color:powderblue;">
+    <body>
 
-        <p style = "font-family:georgia,garamond,serif;font-size:20px;font-style:italic;">
+        <p>
             Resististe tus ganas de comerte al murcielago, pero como consecuencia mueres de hambre. GAME OVER
         </p>
 
@@ -21,7 +21,7 @@
 
 
         <label for="file" >Progreso de la historia:</label>
-        <progress style="text-align:center" id="file" value="100" max="100"> 0% </progress><br>
+        <progress id="file" value="100" max="100"> 0% </progress><br>
 
     </body>
 </html>
