--- a/Lab3/izquierda1.html
+++ b/Lab3/izquierda1.html
@@ -8,9 +8,9 @@
 
     </head>
 
-    <body style="background-color: aqua;">
+    <body>
 
-        <p style = "font-family:georgia,garamond,serif;font-size:20px;font-style:italic;">
+        <p>
             Decides ir a la izquierda, no ves nada a lo lejos, solo puedes ver árboles y más árboles, decides empezar a caminar a lo largo del camino. Pasa 1 hora y sigues sin 
             encontrar algo, tienes mucha hambre y mucha sed, asi que decides descansar, te sientas en una roca grande y observas a tu alrededor, miras al cielo y sorpresa! a lo 
             lejos logras observar humo, seran señales hechas por otra persona?, sera la ciudad? tienes tantas dudas que inicias tu camino. Cuando casi estas llegando vez que el humo
@@ -21,7 +21,7 @@
         <a href='cueva.html'>Ir a la cueva</a><br>
         <br>
         <label for="file" >Progreso de la historia:</label>
-        <progress style="text-align:center" id="file" value="30" max="100"> 0% </progress><br>
+        <progress id="file" value="30" max="100"> 0% </progress><br>
 
         
 
