--- a/Lab3/izquierda2.html
+++ b/Lab3/izquierda2.html
@@ -10,9 +10,9 @@
 
     </head>
 
-    <body style="background-color:powderblue;">
+    <bod>
 
-        <p style = "font-family:georgia,garamond,serif;font-size:20px;font-style:italic;">
+        <p>
             Hay un camino muy alrgo, pero se ve una luz al final, empiezas a caminar de forma apresurada, cuando llegas a la luz observas que hay una puerta la intentas a abrir
             y esta con llave, recuerdas que llevabas una llave en tu bolsa y decides probar. La llave abrió la puerta!!!! Entras, y te encuentras una habitacion con dos cajas, la
             caja de la izquierda dice "Salir de aqui" y la segunda dice "Cura del cancer", debes elegir una opcion.
@@ -23,7 +23,7 @@
 
 
         <label for="file" >Progreso de la historia:</label>
-        <progress style="text-align:center" id="file" value="75" max="100"> 0% </progress><br>
+        <progress id="file" value="75" max="100"> 0% </progress><br>
 
     </body>
 </html>
