--- a/Lab3/derecha2.html
+++ b/Lab3/derecha2.html
@@ -8,16 +8,16 @@
 
     </head>
 
-    <body style="background-color:powderblue;">
+    <body>
 
-        <p style = "font-family:georgia,garamond,serif;font-size:20px;font-style:italic;">
+        <p>
             Oh noo....!! al parecer este lado lleva a un lugar sin salida, lo mejor es regresar a la cabaña!
         </p><br>
 
         <a href='cabana.html'>Regresar</a><br><br>
 
         <label for="file" >Progreso de la historia:</label>
-       <progress style="text-align:center" id="file" value="45" max="100"> 0% </progress><br>
+       <progress id="file" value="45" max="100"> 0% </progress><br>
 
     </body>
 </html>
