--- a/Lab3/home.html
+++ b/Lab3/home.html
@@ -7,18 +7,17 @@
         <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/1/1e/RPC-JP_Logo.png">
     </head>
 
-    <body style="background-color:powderblue;">
+    <body>
 
         <br>
         <br>
 
         
         <a href='principal.html'>INICIAR HISTORIA</a><br>
-        <a onclick="self.close()">SALIR</a><br>
         <br>
 
         <label for="file" >Progreso de la historia:</label>
-        <progress style="text-align:center" id="file" value="0" max="100"> 0% </progress><br>
+        <progress id="file" value="0" max="100"> 0% </progress><br>
         <br>
         <br>
 
